@@ -3,11 +3,11 @@ import java.awt.GraphicsEnvironment
 plugins {
     id 'application'
     id 'extra-java-module-info'
-    id 'org.openjfx.javafxplugin' version '0.1.0'
+    id 'org-openjfx-javafxplugin'
     id 'org.beryx.jlink' version '3.0.1'
 }
 
-def sparrowVersion = '1.8.3'
+def sparrowVersion = '1.8.5'
 def os = org.gradle.internal.os.OperatingSystem.current()
 def osName = os.getFamilyName()
 if(os.macOsX) {
@@ -161,7 +161,7 @@ processResources {
 
 test {
     useJUnitPlatform()
-    jvmArgs '--add-opens=java.base/java.io=ALL-UNNAMED'
+    jvmArgs = ["--add-opens=java.base/java.io=ALL-UNNAMED", "--add-opens=java.base/java.io=com.google.gson"]
 }
 
 application {
@@ -247,6 +247,8 @@ jlink {
                    "--add-reads=com.sparrowwallet.merged.module=com.fasterxml.jackson.annotation",
                    "--add-reads=com.sparrowwallet.merged.module=com.fasterxml.jackson.core",
                    "--add-reads=com.sparrowwallet.merged.module=co.nstant.in.cbor",
+                   "--add-reads=com.sparrowwallet.merged.module=org.bouncycastle.pg",
+                   "--add-reads=com.sparrowwallet.merged.module=org.bouncycastle.provider",
                    "--add-reads=kotlin.stdlib=kotlinx.coroutines.core"]
 
         if(os.windows) {
@@ -649,18 +651,6 @@ extraJavaModuleInfo {
     module('jnacl-1.0.0.jar', 'eu.neilalexander.jnacl', '1.0.0')
     module('jcommander-1.81.jar', 'com.beust.jcommander', '1.81') {
         exports('com.beust.jcommander')
-    }
-    module('pgpainless-core-1.6.6.jar', 'org.pgpainless.core', '1.6.6') {
-        exports('org.pgpainless')
-        exports('org.pgpainless.key')
-        exports('org.pgpainless.key.parsing')
-        exports('org.pgpainless.decryption_verification')
-        exports('org.pgpainless.exception')
-        exports('org.pgpainless.signature')
-        exports('org.pgpainless.util')
-        requires('org.bouncycastle.provider')
-        requires('org.bouncycastle.pg')
-        requires('org.slf4j')
     }
     module('jzlib-1.1.3.jar', 'com.jcraft.jzlib', '1.1.3') {
         exports('com.jcraft.jzlib')
